--- a/CSS code/Home_page_stylesheet.css
+++ b/CSS code/Home_page_stylesheet.css
@@ -1,10 +1,11 @@
 .container{
  			margin: 0px auto;
  			width: 1200px;
+      padding: 0px;
  		}
  		#top-header{
  			text-align: center;
- 			height: 100px;
+ 			height: 80px;
       
  		}
  		#logo{
@@ -15,11 +16,12 @@
 
 .topnav {
 	float:right;
-	width: 59%;
-	height: 60px;
+	width: 56%;
+	height: 55px;
   overflow: hidden;
-  padding-top: 10px;
-  margin: 0px auto;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin: 5px auto;
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: #0074D9;
@@ -55,7 +57,7 @@
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding: 12px 14px;
   background-color: inherit;
   font-family: inherit;
 }
@@ -72,7 +74,7 @@
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
+  padding: 10px 14px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -134,17 +136,7 @@
 }
 
 
-#header-image-menu{
-	top: 1px;
-	position: relative;
-}
-#header-image-menu img{
-	width: 100%;
-	margin: none;
-	height: 400px;
-	padding: none;
-	border-collapse: collapse;
-}
+.w3-center{display:inline-block;width:auto}
 #welcome{
 	overflow: hidden;
 	width: 1000px;
@@ -204,7 +196,7 @@
 .copyright 
 { 
     overflow: hidden; 
-    padding: 3em 0em; 
+    padding: 2em 0em; 
     border-top: 20px solid rgba(255, 255, 255, 0.08); 
     text-align: center; 
     background: #FFFF55;
@@ -245,3 +237,37 @@ ul.contact li a{
     line-height: 40px; 
     text-align: center; 
 } 
+.w3-display-container{position:relative;}
+.w3-button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
+.myslides{display: none;float: left;;}
+.w3-display-right{position:absolute;top:50%;right:0%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+.w3-display-left{position:absolute;top:50%;left:0%;transform:translate(0%,-50%);-ms-transform:translate(-0%,-50%)}
+.w3-black{color:#fff!important;background-color:#000!important;}
+
+.w3-content{margin-left:auto;margin-right:auto}
+.w3-center{display:inline-block;float: left;}
+.w3-section{margin-top:16px!important;margin-bottom:16px!important}
+.w3-container{padding:2px}
+.w3-display-bottommiddle{position:absolute;left:48%;bottom:0;transform:translate(-50%,0%);-ms-transform:translate(-50%,0%)}
+.w3-text-white,.w3-hover-text-white:hover{color:#fff!important}
+.w3-badge,.w3-tag{background-color:#000;color:#fff;display:inline-block;padding-left:8px;padding-right:8px;text-align:center}.w3-badge{border-radius:50%}
+.w3-text-khaki,.w3-hover-text-khaki:hover{color:#b4aa50!important}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+.content {
+  padding: 10px;
+}
+
+.head{
+  padding: 5px 5px;
+  background: #555;
+  color: #f1f1f1;
+}
